[gd_scene load_steps=2 format=3 uid="uid://cjutkl24dj34r"]

[ext_resource type="Script" uid="uid://dwbq6wourox8t" path="res://autoloads/dialogue/_dialogue_ui.gd" id="1_42peo"]

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_42peo")

[node name="Dialogue" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -61.0
offset_top = -50.0
offset_right = 61.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Dialogue"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Dialogue/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Dialogue/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Name Label"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogueLabel" type="Label" parent="Dialogue/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Dialogue Label"

[node name="DialogueOptions" type="HBoxContainer" parent="Dialogue/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1
